--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,47 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-image: white;
+}
+
+nav {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 10vh;
+  background: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
 }
 
-.App-link {
-  color: #61dafb;
+.nav-links {
+  width: 40%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+}
+li {
+  list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li .leftCard,
+li .rightCard {
+  border: 1px solid rgb(47, 37, 37);
+  border-radius: 2px;
+  padding: 20px;
+}
+
+li .leftCard {
+  min-width: 50%;
+}
+
+li .rightCard {
+  min-width: 50%;
+}
+
+.summary {
+  position: absolute;
+  bottom: 10%;
+  right: 50%;
+}
+.column-3 {
+  columns: 3;
 }
