--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 .App {
   min-height: 100vh;
   background-image: white;
+}
+
+li {
+  list-style: none;
 }
 
 nav {
@@ -9,6 +23,7 @@ nav {
   align-items: center;
   min-height: 10vh;
   background: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+  box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
 }
 
 .nav-links {
@@ -18,29 +33,15 @@ nav {
   align-items: center;
   list-style: none;
 }
-li {
-  list-style: none;
-}
+.summary {
+  height: 30%;
 
-li .leftCard,
-li .rightCard {
   border: 1px solid rgb(47, 37, 37);
   border-radius: 2px;
-  padding: 20px;
-}
-
-li .leftCard {
-  min-width: 50%;
-}
-
-li .rightCard {
-  min-width: 50%;
-}
-
-.summary {
-  position: absolute;
-  bottom: 10%;
-  right: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
 }
 .column-3 {
   columns: 3;
